// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider /> accessibilityState disabled sets disabled={true} 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "defaultIndicatorIdle": {
          "backgroundColor": "#C0C0C0",
          "height": 10,
          "width": 2,
        },
        "defaultIndicatorMarked": {
          "backgroundColor": "#CCCCCC",
          "height": 20,
          "width": 5,
        },
        "defaultSlider": {},
        "defaultSlideriOS": {
          "height": 40,
        },
        "sliderMainContainer": {
          "width": "100%",
          "zIndex": 1,
        },
        "stepIndicatorElement": {
          "alignContent": "center",
          "alignItems": "center",
        },
        "stepNumber": {
          "alignItems": "center",
          "marginTop": 20,
          "position": "absolute",
        },
        "stepsIndicator": {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "top": 10,
          "zIndex": 2,
        },
        "thumbImage": {
          "alignContent": "center",
          "alignItems": "center",
          "position": "absolute",
        },
        "thumbImageContainer": {
          "alignContent": "center",
          "alignItems": "center",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 3,
        },
        "trackMarkContainer": {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 3,
        },
      },
      {
        "height": 40,
      },
      {
        "justifyContent": "center",
      },
    ]
  }
>
  <RNCSlider
    accessibilityState={
      {
        "disabled": true,
      }
    }
    disabled={true}
    inverted={false}
    lowerLimit={-9007199254740991}
    maximumValue={1}
    minimumValue={0}
    onChange={[Function]}
    onRNCSliderAccessibilityAction={null}
    onRNCSliderSlidingComplete={null}
    onRNCSliderSlidingStart={null}
    onRNCSliderValueChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    step={0}
    style={
      [
        {
          "width": 0,
          "zIndex": 1,
        },
        {
          "height": 40,
        },
        {
          "alignContent": "center",
          "alignItems": "center",
        },
      ]
    }
    tapToSeek={false}
    thumbImage={null}
    upperLimit={9007199254740991}
  />
</View>
`;

exports[`<Slider /> disabled prop overrides accessibilityState.disabled 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "defaultIndicatorIdle": {
          "backgroundColor": "#C0C0C0",
          "height": 10,
          "width": 2,
        },
        "defaultIndicatorMarked": {
          "backgroundColor": "#CCCCCC",
          "height": 20,
          "width": 5,
        },
        "defaultSlider": {},
        "defaultSlideriOS": {
          "height": 40,
        },
        "sliderMainContainer": {
          "width": "100%",
          "zIndex": 1,
        },
        "stepIndicatorElement": {
          "alignContent": "center",
          "alignItems": "center",
        },
        "stepNumber": {
          "alignItems": "center",
          "marginTop": 20,
          "position": "absolute",
        },
        "stepsIndicator": {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "top": 10,
          "zIndex": 2,
        },
        "thumbImage": {
          "alignContent": "center",
          "alignItems": "center",
          "position": "absolute",
        },
        "thumbImageContainer": {
          "alignContent": "center",
          "alignItems": "center",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 3,
        },
        "trackMarkContainer": {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 3,
        },
      },
      {
        "height": 40,
      },
      {
        "justifyContent": "center",
      },
    ]
  }
>
  <RNCSlider
    accessibilityState={
      {
        "disabled": true,
      }
    }
    disabled={true}
    inverted={false}
    lowerLimit={-9007199254740991}
    maximumValue={1}
    minimumValue={0}
    onChange={[Function]}
    onRNCSliderAccessibilityAction={null}
    onRNCSliderSlidingComplete={null}
    onRNCSliderSlidingStart={null}
    onRNCSliderValueChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    step={0}
    style={
      [
        {
          "width": 0,
          "zIndex": 1,
        },
        {
          "height": 40,
        },
        {
          "alignContent": "center",
          "alignItems": "center",
        },
      ]
    }
    tapToSeek={false}
    thumbImage={null}
    upperLimit={9007199254740991}
  />
</View>
`;

exports[`<Slider /> disabled prop overrides accessibilityState.enabled 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "defaultIndicatorIdle": {
          "backgroundColor": "#C0C0C0",
          "height": 10,
          "width": 2,
        },
        "defaultIndicatorMarked": {
          "backgroundColor": "#CCCCCC",
          "height": 20,
          "width": 5,
        },
        "defaultSlider": {},
        "defaultSlideriOS": {
          "height": 40,
        },
        "sliderMainContainer": {
          "width": "100%",
          "zIndex": 1,
        },
        "stepIndicatorElement": {
          "alignContent": "center",
          "alignItems": "center",
        },
        "stepNumber": {
          "alignItems": "center",
          "marginTop": 20,
          "position": "absolute",
        },
        "stepsIndicator": {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "top": 10,
          "zIndex": 2,
        },
        "thumbImage": {
          "alignContent": "center",
          "alignItems": "center",
          "position": "absolute",
        },
        "thumbImageContainer": {
          "alignContent": "center",
          "alignItems": "center",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 3,
        },
        "trackMarkContainer": {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 3,
        },
      },
      {
        "height": 40,
      },
      {
        "justifyContent": "center",
      },
    ]
  }
>
  <RNCSlider
    accessibilityState={
      {
        "disabled": false,
      }
    }
    disabled={false}
    inverted={false}
    lowerLimit={-9007199254740991}
    maximumValue={1}
    minimumValue={0}
    onChange={[Function]}
    onRNCSliderAccessibilityAction={null}
    onRNCSliderSlidingComplete={null}
    onRNCSliderSlidingStart={null}
    onRNCSliderValueChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    step={0}
    style={
      [
        {
          "width": 0,
          "zIndex": 1,
        },
        {
          "height": 40,
        },
        {
          "alignContent": "center",
          "alignItems": "center",
        },
      ]
    }
    tapToSeek={false}
    thumbImage={null}
    upperLimit={9007199254740991}
  />
</View>
`;

exports[`<Slider /> renders a slider with custom props 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "defaultIndicatorIdle": {
          "backgroundColor": "#C0C0C0",
          "height": 10,
          "width": 2,
        },
        "defaultIndicatorMarked": {
          "backgroundColor": "#CCCCCC",
          "height": 20,
          "width": 5,
        },
        "defaultSlider": {},
        "defaultSlideriOS": {
          "height": 40,
        },
        "sliderMainContainer": {
          "width": "100%",
          "zIndex": 1,
        },
        "stepIndicatorElement": {
          "alignContent": "center",
          "alignItems": "center",
        },
        "stepNumber": {
          "alignItems": "center",
          "marginTop": 20,
          "position": "absolute",
        },
        "stepsIndicator": {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "top": 10,
          "zIndex": 2,
        },
        "thumbImage": {
          "alignContent": "center",
          "alignItems": "center",
          "position": "absolute",
        },
        "thumbImageContainer": {
          "alignContent": "center",
          "alignItems": "center",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 3,
        },
        "trackMarkContainer": {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 3,
        },
      },
      {
        "height": 40,
      },
      {
        "justifyContent": "center",
      },
    ]
  }
>
  <RNCSlider
    disabled={false}
    inverted={false}
    lowerLimit={0}
    maximumTrackTintColor="red"
    maximumValue={2}
    minimumTrackTintColor="blue"
    minimumValue={-1}
    onChange={[Function]}
    onRNCSliderAccessibilityAction={null}
    onRNCSliderSlidingComplete={[Function]}
    onRNCSliderSlidingStart={null}
    onRNCSliderValueChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    step={0.25}
    style={
      [
        {
          "width": 0,
          "zIndex": 1,
        },
        {
          "height": 40,
        },
        {
          "alignContent": "center",
          "alignItems": "center",
        },
      ]
    }
    tapToSeek={false}
    thumbImage={null}
    thumbTintColor="green"
    upperLimit={1}
    value={0.5}
  />
</View>
`;

exports[`<Slider /> renders disabled slider 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "defaultIndicatorIdle": {
          "backgroundColor": "#C0C0C0",
          "height": 10,
          "width": 2,
        },
        "defaultIndicatorMarked": {
          "backgroundColor": "#CCCCCC",
          "height": 20,
          "width": 5,
        },
        "defaultSlider": {},
        "defaultSlideriOS": {
          "height": 40,
        },
        "sliderMainContainer": {
          "width": "100%",
          "zIndex": 1,
        },
        "stepIndicatorElement": {
          "alignContent": "center",
          "alignItems": "center",
        },
        "stepNumber": {
          "alignItems": "center",
          "marginTop": 20,
          "position": "absolute",
        },
        "stepsIndicator": {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "top": 10,
          "zIndex": 2,
        },
        "thumbImage": {
          "alignContent": "center",
          "alignItems": "center",
          "position": "absolute",
        },
        "thumbImageContainer": {
          "alignContent": "center",
          "alignItems": "center",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 3,
        },
        "trackMarkContainer": {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 3,
        },
      },
      {
        "height": 40,
      },
      {
        "justifyContent": "center",
      },
    ]
  }
>
  <RNCSlider
    accessibilityState={
      {
        "disabled": true,
      }
    }
    disabled={true}
    inverted={false}
    lowerLimit={-9007199254740991}
    maximumValue={1}
    minimumValue={0}
    onChange={[Function]}
    onRNCSliderAccessibilityAction={null}
    onRNCSliderSlidingComplete={null}
    onRNCSliderSlidingStart={null}
    onRNCSliderValueChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    step={0}
    style={
      [
        {
          "width": 0,
          "zIndex": 1,
        },
        {
          "height": 40,
        },
        {
          "alignContent": "center",
          "alignItems": "center",
        },
      ]
    }
    tapToSeek={false}
    thumbImage={null}
    upperLimit={9007199254740991}
  />
</View>
`;

exports[`<Slider /> renders enabled slider 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "defaultIndicatorIdle": {
          "backgroundColor": "#C0C0C0",
          "height": 10,
          "width": 2,
        },
        "defaultIndicatorMarked": {
          "backgroundColor": "#CCCCCC",
          "height": 20,
          "width": 5,
        },
        "defaultSlider": {},
        "defaultSlideriOS": {
          "height": 40,
        },
        "sliderMainContainer": {
          "width": "100%",
          "zIndex": 1,
        },
        "stepIndicatorElement": {
          "alignContent": "center",
          "alignItems": "center",
        },
        "stepNumber": {
          "alignItems": "center",
          "marginTop": 20,
          "position": "absolute",
        },
        "stepsIndicator": {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "top": 10,
          "zIndex": 2,
        },
        "thumbImage": {
          "alignContent": "center",
          "alignItems": "center",
          "position": "absolute",
        },
        "thumbImageContainer": {
          "alignContent": "center",
          "alignItems": "center",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 3,
        },
        "trackMarkContainer": {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "justifyContent": "center",
          "position": "absolute",
          "zIndex": 3,
        },
      },
      {
        "height": 40,
      },
      {
        "justifyContent": "center",
      },
    ]
  }
>
  <RNCSlider
    disabled={false}
    inverted={false}
    lowerLimit={-9007199254740991}
    maximumValue={1}
    minimumValue={0}
    onChange={[Function]}
    onRNCSliderAccessibilityAction={null}
    onRNCSliderSlidingComplete={null}
    onRNCSliderSlidingStart={null}
    onRNCSliderValueChange={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    step={0}
    style={
      [
        {
          "width": 0,
          "zIndex": 1,
        },
        {
          "height": 40,
        },
        {
          "alignContent": "center",
          "alignItems": "center",
        },
      ]
    }
    tapToSeek={false}
    thumbImage={null}
    upperLimit={9007199254740991}
  />
</View>
`;
